2013-06-26 Miguel de Dios <miguel.dedios@artica.es>

	* extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql: added the new
	columns in the table "talert_snmp".

2013-06-26  Ramon Novoa  <rnovoa@artica.es>

	* pandora_console.spec,
	  pandora_console.redhat.spec: Fixed directory permissions.

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/configurar_agente.php,
	include/functions_agents.php: fixed the operations with the ip or
	ips adress of agent.
	
	MERGED FROM THE BRANCH PANDORA_4_0

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/menu.php: fixed the default value for refresh in the
	extensions.
	
	Fixes: #2310
	
	* include/functions_extensions.php: cleaned source code style.

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* operation/users/user_edit.php: fixed the "home page" for user,
	now it does show ugly 0, show correct the dashboard and
	visualmap and can set other.

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* operation/users/user_edit.php: merge the code for made more
	easy the merges from the branch.

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* extensions/vnc_view.php: added the changes from the branch of
	pandora_4 made for Sancho.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* operation/visual_console/render_view.php: fixed the javascript
	draw lines when there is any error in the map.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_visual_map.php: added more changes for to make
	more easy the merges from the branch.

2013-06-24 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_visual_map.php: fixed the links of module
	graphs into public visualmap.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-24 Miguel de Dios <miguel.dedios@artica.es>
