@@ -1,3 +1,11 @@
+2013-06-27 Miguel de Dios <miguel.dedios@artica.es>
+
+	* godmode/servers/plugin.php, godmode/setup/file_manager.php,
+	include/functions_filemanager.php: added the filemanager to server
+	plugin, and of course change the code for to make this feature.
+	
+	MERGED FROM THE BRANCH PANDORA_4_0
+
 2013-06-26 Miguel de Dios <miguel.dedios@artica.es>
 
 	* extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
